@@ -1,6 +1,6 @@
 Name:           language-c
-Version:        0.4
-Cabal-Version:  >= 1.2
+Version:        0.4.1
+Cabal-Version:  >= 1.2.3
 Build-Type:     Simple
 License:        BSD3
 License-File:   LICENSE
